removed school subheading

--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -132,9 +132,6 @@
     \resumeSubheading
       {Singapore Management University}{Aug. 2020 -- Dec. 2024}
       {Bachelor of Accountancy, Second Major in Computer Science}{}
-      \resumeItemListStart
-        \resumeItem{Relevant Coursework: Intro to Software Engineering, Web App Development, Data Management, Data Structures and Algorithms}
-      \resumeItemListEnd
     \resumeSubheadingSpecial
       {University of St. Gallen (Exchange)}{Sept. 2023 -- Dec. 2023}
   \resumeSubHeadingListEnd
@@ -160,7 +157,7 @@
       \resumeItemListStart
         \resumeItem{Developed unit-tested front-end components and back-end routes for 13 different customer products using React generating revenue of more than \$12k}
         \resumeItem{\textbf{Manager Reference:} Charles Yong, Chief Architect, \href{mailto:x@x.com}{\underline{charles@affle.com}}}
-        \resumeItem{Technologies: \textbf{React, HTML/CSS}}
+        \resumeItem{Technologies: \textbf{React, HTML/CSS, Express, Node}}
       \resumeItemListEnd
 
     \resumeSubheading
