--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -119,21 +119,30 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Edgar Russell Teong Kai Han} \\ \vspace{1pt}
-    \small (+65) 97379450 $|$ \href{mailto:x@x.com}{\underline{edgargarteong@gmail.com}} $|$ 
-    \href{https://linkedin.com/in/edgarteong}{\underline{linkedin.com/in/edgarteong}} $|$
-    \href{https://github.com/safarinexus}{\underline{github.com/safarinexus}}
+  \textbf{\Huge \scshape Edgar Russell Teong Kai Han} \\ \vspace{1pt}
 \end{center}
 
+\begin{center}
+    \small 
+    \href{https://edgr.vercel.app}{\underline{edgr.vercel.app}} $|$ 
+    \href{https://github.com/safarinexus}{\underline{github.com/safarinexus}} $|$
+    \href{mailto:x@x.com}{\underline{edgargarteong@gmail.com}} $|$ 
+    \href{https://linkedin.com/in/edgarteong}{\underline{linkedin.com/in/edgarteong}} $|$
+    (+65) 97379450
+\end{center}
 
 %-----------EDUCATION-----------
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Singapore Management University}{Aug. 2020 -- Dec. 2024}
-      {Bachelor of Accountancy, Second Major in Computer Science}{}
-    \resumeSubheadingSpecial
-      {University of St. Gallen (Exchange)}{Sept. 2023 -- Dec. 2023}
+      {Singapore Management University}{Aug. 2020 -- Jun. 2025}
+      {Bachelor of Accountancy, Information Systems}{Singapore}
+      \resumeItemListStart
+        \resumeItem{\textbf {Relevant Coursework:} Web App Development, Data Structures, Software Engineering, Data Management}
+      \resumeItemListEnd
+    \resumeSubheading
+      {University of St. Gallen}{Sept. 2023 -- Dec. 2023}
+      {Singapore Universities Student Exchange Programme, Fall Semester 2023}{St. Gallen, Switzerland}
   \resumeSubHeadingListEnd
 
 
@@ -155,7 +164,7 @@
       {Affle}{Jun. 2023 -- Aug. 2023}
       {Fullstack Engineer Intern}{Remote}
       \resumeItemListStart
-        \resumeItem{Developed unit-tested front-end components and back-end routes for 13 different customer products using React generating revenue of more than \$12k}
+        \resumeItem{Developed unit-tested front-end components and APIs for 13 different customer products using React generating revenue of more than \$12k}
         \resumeItem{\textbf{Manager Reference:} Charles Yong, Chief Architect, \href{mailto:x@x.com}{\underline{charles@affle.com}}}
         \resumeItem{Technologies: \textbf{React, HTML/CSS, Express, Node}}
       \resumeItemListEnd
@@ -195,17 +204,23 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-        {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{HTML/CSS, Jest, Webpack, npm, React, PostgreSQL, Node.js, Express.js}}{Jan. 2024 -- Present}
+        {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{React, PostgreSQL + Prisma, Node.js, Express.js, RESTful APIs}}{Jan. 2024 -- Present}
           \resumeItemListStart
-          \resumeItem{A collection full-stack projects learned from "The Odin Project" where I self-taught full-stack development}
-          \resumeItem{Projects include web apps such as a functional calculator, a to-do list, a weather app, a message board and Battleship}
+          \resumeItem{A collection full-stack projects developed from following "The Odin Project" where I self-taught full-stack development}
+          \resumeItem{Projects include web apps such as a functional calculator, a to-do list, a weather app, a full-stack message board}
           \resumeItemListEnd
       \resumeProjectHeading
-        {\textbf{\href{https://www.forlala.com}{Kyla's Birthday}} $|$ \emph{HTML/CSS, JavaScript}}{July 2024}
+        {\textbf{\href{https://edgr-odin-blog-access.vercel.app/}{Blog API + Website}} $|$ \emph{Node, React, TailwindCSS, PostgreSQL + Prisma, Railway, Vercel}}{Aug. 2024}
           \resumeItemListStart
-            \resumeItem{Developed a static webpage to celebrate my partner's birthday, with cross browser compatibility}
-            \resumeItem{Scroll animations and design are written in vanilla JavaScript}
+            \resumeItem{Personal project to develop a Blog API, as well as two separate frontends for viewing and editing posts}
+            \resumeItem{User authentication with JSON Web Tokens, as well as full stack deployment using Railway for the backend and Vercel for the two frontends}
           \resumeItemListEnd
+        \resumeProjectHeading
+      {\textbf{\href{https://odin-file-uploader-production-11ed.up.railway.app/}{Drive Clone/File Uploader}} $|$ \emph{Node/Express, PostgreSQL + Prisma, Railway, Supabase}}{Aug. 2024}
+        \resumeItemListStart
+          \resumeItem{Personal project to replicate file storage websites, complete with user auth and folder hierarchy system.}
+          \resumeItem{Made with Node.js and Express Views, with Prisma + Postgres database and Supabase CDN}
+        \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
@@ -215,9 +230,9 @@
 \section{Technical Skills \& Interests}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres + Prisma), TypeScript/JavaScript, Node.js, HTML/CSS/SASS, R, PHP} \\
-     \textbf{Frameworks}{: React, Express, CSS Modules} \\
-     \textbf{Developer Tools}{: Git, Figma, SAP, Prisma, Jest, Vitest} \\
+     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres + Prisma), TypeScript/JavaScript, Node.js, HTML/CSS, R, PHP} \\
+     \textbf{Frameworks}{: React, Express, TailwindCSS} \\
+     \textbf{Developer Tools}{: Git, Figma, SAP, Jest, Vitest, SuperTest, Redis} \\
      \textbf{Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
      \textbf{Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
