--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -124,7 +124,7 @@
 
 \begin{center}
     \small 
-    \href{https://edgr.vercel.app}{\underline{edgr.vercel.app}} $|$ 
+    \href{https://edgr.live}{\underline{www.edgr.live}} $|$ 
     \href{https://github.com/safarinexus}{\underline{github.com/safarinexus}} $|$
     \href{mailto:x@x.com}{\underline{edgargarteong@gmail.com}} $|$ 
     \href{https://linkedin.com/in/edgarteong}{\underline{linkedin.com/in/edgarteong}} $|$
@@ -135,7 +135,7 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Singapore Management University}{Aug. 2020 -- Jun. 2025}
+      {Singapore Management University}{Aug. 2020 -- Dec. 2024}
       {Bachelor of Accountancy, Information Systems}{Singapore}
       \resumeItemListStart
         \resumeItem{\textbf {Relevant Coursework:} Web App Development, Data Structures, Software Engineering, Data Management}
@@ -159,15 +159,6 @@
   %     \resumeItemListEnd
   %    \resumeSubHeadingListEnd
   %-------------------------------------------
-
-    \resumeSubheading
-      {Affle}{Jun. 2023 -- Aug. 2023}
-      {Fullstack Engineer Intern}{Remote}
-      \resumeItemListStart
-        \resumeItem{Developed unit-tested front-end components and APIs for 13 different customer products using React generating revenue of more than \$12k}
-        \resumeItem{\textbf{Manager Reference:} Charles Yong, Chief Architect, \href{mailto:x@x.com}{\underline{charles@affle.com}}}
-        \resumeItem{Technologies: \textbf{React, HTML/CSS, Express, Node}}
-      \resumeItemListEnd
 
     \resumeSubheading
       {Government Technology Agency (GovTech)}{Jan. 2023}
@@ -204,7 +195,7 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-        {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{React, PostgreSQL + Prisma, Node.js, Express.js, RESTful APIs}}{Jan. 2024 -- Present}
+        {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{React, PostgreSQL + Prisma, Node.js, Express.js, Webpack, RESTful APIs}}{Jan. 2024 -- Present}
           \resumeItemListStart
           \resumeItem{A collection full-stack projects developed from following "The Odin Project" where I self-taught full-stack development}
           \resumeItem{Projects include web apps such as a functional calculator, a to-do list, a weather app, a full-stack message board}
@@ -231,8 +222,8 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres + Prisma), TypeScript/JavaScript, Node.js, HTML/CSS, R, PHP} \\
-     \textbf{Frameworks}{: React, Express, TailwindCSS} \\
-     \textbf{Developer Tools}{: Git, Figma, SAP, Jest, Vitest, SuperTest, Redis} \\
+     \textbf{Frameworks}{: React, Express, TailwindCSS, GSAP} \\
+     \textbf{Developer Tools}{: Git, Figma, SAP, Jest, Vitest, SuperTest, Redis, Webpack} \\
      \textbf{Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
      \textbf{Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
