--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -135,8 +135,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Singapore Management University}{Aug. 2020 -- Dec. 2024}
-      {Bachelor of Accountancy, Information Systems}{Singapore}
+      {Singapore Management University}{Aug. 2020 -- Present}
+      {Bachelor of Accountancy, Computer Science}{Singapore}
       \resumeItemListStart
         \resumeItem{\textbf {Relevant Coursework:} Web App Development, Data Structures, Software Engineering, Data Management}
       \resumeItemListEnd
@@ -195,23 +195,28 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-        {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{React, PostgreSQL + Prisma, Node.js, Express.js, Webpack, RESTful APIs}}{Jan. 2024 -- Present}
+        {\textbf{\href{https://edgr.live}{Portfolio Website}} $|$ \emph{TypeScript, React, Vite, TailwindCSS, GSAP}}{Oct. 2024}
           \resumeItemListStart
-          \resumeItem{A collection full-stack projects developed from following "The Odin Project" where I self-taught full-stack development}
-          \resumeItem{Projects include web apps such as a functional calculator, a to-do list, a weather app, a full-stack message board}
+          \resumeItem{My own personal portfolio website made from scratch, showcasing my personality, projects and experience.}
           \resumeItemListEnd
       \resumeProjectHeading
-        {\textbf{\href{https://edgr-odin-blog-access.vercel.app/}{Blog API + Website}} $|$ \emph{Node, React, TailwindCSS, PostgreSQL + Prisma, Railway, Vercel}}{Aug. 2024}
+        {\textbf{\href{https://edgr-odin-blog-access.vercel.app/}{Blog API \& Editor}} $|$ \emph{Node, React, TailwindCSS, PostgreSQL + Prisma, Railway, Vercel}}{Aug. 2024}
           \resumeItemListStart
-            \resumeItem{Personal project to develop a Blog API, as well as two separate frontends for viewing and editing posts}
-            \resumeItem{User authentication with JSON Web Tokens, as well as full stack deployment using Railway for the backend and Vercel for the two frontends}
+            \resumeItem{Personal project of an Blog API with admin and viewer frontends, made entirely by me.}
+            \resumeItem{User authentication with JSON Web Tokens, as well as full stack deployment using Railway for the backend and Vercel for frontends}
           \resumeItemListEnd
         \resumeProjectHeading
-      {\textbf{\href{https://odin-file-uploader-production-11ed.up.railway.app/}{Drive Clone/File Uploader}} $|$ \emph{Node/Express, PostgreSQL + Prisma, Railway, Supabase}}{Aug. 2024}
+      {\textbf{\href{https://odin-file-uploader-production-11ed.up.railway.app/}{File Uploader}} $|$ \emph{Node/Express, PostgreSQL + Prisma, Railway, Supabase}}{Aug. 2024}
         \resumeItemListStart
-          \resumeItem{Personal project to replicate file storage websites, complete with user auth and folder hierarchy system.}
-          \resumeItem{Made with Node.js and Express Views, with Prisma + Postgres database and Supabase CDN}
+          \resumeItem{Personal project of a file storage websites, complete with user auth and folder hierarchy system.}
+          \resumeItem{Made with Node.js and Express Views, with Prisma + Postgres database and Supabase CDN, entirely by me.}
         \resumeItemListEnd
+        \resumeProjectHeading
+        {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{React, PostgreSQL + Prisma, Node.js, Express.js, Webpack, RESTful APIs}}{Jan. 2024 -- Present}
+          \resumeItemListStart
+          \resumeItem{A collection full-stack projects developed from "The Odin Project" where I self-taught full-stack development}
+          \resumeItem{Projects include frontend webs app such as a weather app and React shopping page, and full-stack web apps such as an inventory site and message board. All built entirely by me.}
+          \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
