--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -202,7 +202,7 @@
       \resumeProjectHeading
         {\textbf{\href{https://edgr-odin-blog-access.vercel.app/}{Blog API \& Editor}} $|$ \emph{Node, React, TailwindCSS, PostgreSQL + Prisma, Railway, Vercel}}{Aug. 2024}
           \resumeItemListStart
-            \resumeItem{Personal project of an Blog API with admin and viewer frontends, made entirely by me.}
+            \resumeItem{Personal project of a Blog API with admin and viewer frontends, made entirely by me.}
             \resumeItem{User authentication with JSON Web Tokens, as well as full stack deployment using Railway for the backend and Vercel for frontends}
           \resumeItemListEnd
         \resumeProjectHeading
