--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -195,27 +195,27 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-        {\textbf{\href{https://edgr.live}{Portfolio Website}} $|$ \emph{TypeScript, React, Vite, TailwindCSS, GSAP}}{Oct. 2024}
+        {\textbf{\href{https://edgr.live}{Portfolio Website}} $|$ \emph{Next.js, React.js, TypeScript, TailwindCSS, GSAP, Vercel}}{Oct. 2024}
           \resumeItemListStart
           \resumeItem{My own personal portfolio website made from scratch, showcasing my personality, projects and experience.}
           \resumeItemListEnd
       \resumeProjectHeading
         {\textbf{\href{https://edgr-odin-blog-access.vercel.app/}{Blog API \& Editor}} $|$ \emph{Node, React, TailwindCSS, PostgreSQL + Prisma, Railway, Vercel}}{Aug. 2024}
           \resumeItemListStart
-            \resumeItem{Personal project of a Blog API with admin and viewer frontends, made entirely by me.}
+            \resumeItem{Personal project of a Blog API with admin and viewer frontends, made from scratch.}
             \resumeItem{User authentication with JSON Web Tokens, as well as full stack deployment using Railway for the backend and Vercel for frontends}
           \resumeItemListEnd
         \resumeProjectHeading
       {\textbf{\href{https://odin-file-uploader-production-11ed.up.railway.app/}{File Uploader}} $|$ \emph{Node/Express, PostgreSQL + Prisma, Railway, Supabase}}{Aug. 2024}
         \resumeItemListStart
           \resumeItem{Personal project of a file storage websites, complete with user auth and folder hierarchy system.}
-          \resumeItem{Made with Node.js and Express Views, with Prisma + Postgres database and Supabase CDN, entirely by me.}
+          \resumeItem{Made with Node.js and Express Views, with Prisma + Postgres database and Supabase CDN, built from scratch.}
         \resumeItemListEnd
         \resumeProjectHeading
         {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{React, PostgreSQL + Prisma, Node.js, Express.js, Webpack, RESTful APIs}}{Jan. 2024 -- Present}
           \resumeItemListStart
           \resumeItem{A collection full-stack projects developed from "The Odin Project" where I self-taught full-stack development}
-          \resumeItem{Projects include frontend webs app such as a weather app and React shopping page, and full-stack web apps such as an inventory site and message board. All built entirely by me.}
+          \resumeItem{Projects include frontend webs app such as a weather app and React shopping page, and full-stack web apps such as an inventory site and message board. All built from scratch.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -227,8 +227,8 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres + Prisma), TypeScript/JavaScript, Node.js, HTML/CSS, R, PHP} \\
-     \textbf{Frameworks}{: React, Express, TailwindCSS, GSAP} \\
-     \textbf{Developer Tools}{: Git, Figma, SAP, Jest, Vitest, SuperTest, Redis, Webpack} \\
+     \textbf{Frameworks}{: React, Express, Jest, Vitest, SuperTest, TailwindCSS, GSAP, Next.js} \\
+     \textbf{Developer Tools}{: Git, Figma, SAP, Redis, Webpack, Vercel, Heroku, Railway, Koyeb} \\
      \textbf{Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
      \textbf{Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
