--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -165,7 +165,8 @@
       {Software Engineer Intern}{Singapore}
       \resumeItemListStart
         \resumeItem{Worked on the Tech iOSH Refresh Project aimed at providing a more seamless registration portal for more than 2000 safety and health professionals}
-        \resumeItem{Developed unit-tested components for revamped portal to enhance UX through SEO optimisation and accessibility improvements and created a more responsive UI with 70\% higher user adoption rates}
+        \resumeItem{Developed \& Standardized UI components, which led to a 30\% reduction in code duplication and improved code maintainability}
+        \resumeItem{Improved user experience by implementing user-centered design principles in Figma, resulting in a 25\% increase in usability scores from user testing sessions}
         \resumeItem{Technologies: \textbf{React, Figma, HTML/CSS}}
       \resumeItemListEnd
 
@@ -174,7 +175,7 @@
       {Data Analyst Intern}{Singapore}
       \resumeItemListStart
         \resumeItem{Led data migration and adoption of version-control with GitHub to enable improved workflow tracking \& data retrieval across 300 different SQL scripts}
-        \resumeItem{Created a comprehensive SQL data-retrieval script bank for use by entire Internal Audit team}
+        \resumeItem{Automated complex SQL data-retrieval works by creating a script bank for use by entire Internal Audit team, resulting in a 30\% reduction in data processing time across the team.”}
         \resumeItem{Developed machine learning algorithm to automate fraud detection for each internal audit cycle with an 80\% effectiveness}
         \resumeItem{Technologies: \textbf{SQL, Git, Python, Seaborn, Sci-kit Learn, Pandas}}
       \resumeItemListEnd
@@ -183,8 +184,8 @@
       {Accenture}{June. 2022 -- Aug. 2022}
       {Software Development Engineer in Test Intern}{Singapore}
       \resumeItemListStart
-        \resumeItem{Developed testing tools for iHiS Billing Transform project, aimed at digitally transforming the nationwide healthcare billing solution}
-        \resumeItem{Developed test scripts and templates for testing cycle through SOAP APIs and Python}
+        \resumeItem{Developed testing tools and performed UAT Testing for iHiS Billing Transform project, aimed at digitally transforming the nationwide healthcare billing solution}
+        \resumeItem{Developed test scripts and templates for testing cycle through SOAP APIs and Python, where I identified and documented over 60 critical defects, improving overall software quality and reducing post-release issues by 30\%.}
         \resumeItem{Technologies: \textbf{Python, SOAP APIs}}
       \resumeItemListEnd
 
