--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -213,7 +213,7 @@
           \resumeItem{Made with Node.js and Express Views, with Prisma + Postgres database and Supabase CDN, built from scratch.}
         \resumeItemListEnd
         \resumeProjectHeading
-        {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{React, PostgreSQL + Prisma, Node.js, Express.js, Webpack, RESTful APIs}}{Jan. 2024 -- Present}
+        {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{React, PostgreSQL, Prisma, Node.js, Express.js, Webpack, RESTful API}}{Feb. 2024 -- Sept. 2024}
           \resumeItemListStart
           \resumeItem{A collection full-stack projects developed from "The Odin Project" where I self-taught full-stack development}
           \resumeItem{Projects include frontend webs app such as a weather app and React shopping page, and full-stack web apps such as an inventory site and message board. All built from scratch.}
