--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -138,7 +138,7 @@
       {Singapore Management University}{Aug. 2020 -- Present}
       {Bachelor of Accountancy, Computer Science}{Singapore}
       \resumeItemListStart
-        \resumeItem{\textbf {Relevant Coursework:} Web App Development, Data Structures, Software Engineering, Data Management}
+        \resumeItem{\textbf {Relevant Coursework:} Web App Development, Data Structures \& Algorithms, Software Engineering, Data Management}
       \resumeItemListEnd
     \resumeSubheading
       {University of St. Gallen}{Sept. 2023 -- Dec. 2023}
@@ -175,7 +175,7 @@
       {Data Analyst Intern}{Singapore}
       \resumeItemListStart
         \resumeItem{Led data migration and adoption of version-control with GitHub to enable improved workflow tracking \& data retrieval across 300 different SQL scripts}
-        \resumeItem{Automated complex SQL data-retrieval works by creating a script bank for use by entire Internal Audit team, resulting in a 30\% reduction in data processing time across the team.”}
+        \resumeItem{Automated complex SQL data-retrieval works by creating a script bank for use by entire Internal Audit team, resulting in a 30\% reduction in data processing time across the team.}
         \resumeItem{Developed machine learning algorithm to automate fraud detection for each internal audit cycle with an 80\% effectiveness}
         \resumeItem{Technologies: \textbf{SQL, Git, Python, Seaborn, Sci-kit Learn, Pandas}}
       \resumeItemListEnd
@@ -189,6 +189,10 @@
         \resumeItem{Technologies: \textbf{Python, SOAP APIs}}
       \resumeItemListEnd
 
+      \resumeSubheading
+      {EY}{Dec. 2021 -- Feb. 2022}
+      {Audit \& Assurance Intern}{Singapore}
+
   \resumeSubHeadingListEnd
 
 
@@ -199,24 +203,25 @@
         {\textbf{\href{https://edgr.live}{Portfolio Website}} $|$ \emph{Next.js, React.js, TypeScript, TailwindCSS, GSAP, Vercel}}{Oct. 2024}
           \resumeItemListStart
           \resumeItem{My own personal portfolio website made from scratch, showcasing my personality, projects and experience.}
+          \resumeItem{Built and designed entirely by me.}
           \resumeItemListEnd
       \resumeProjectHeading
-        {\textbf{\href{https://edgr-odin-blog-access.vercel.app/}{Blog API \& Editor}} $|$ \emph{Node, React, TailwindCSS, PostgreSQL + Prisma, Railway, Vercel}}{Aug. 2024}
+        {\textbf{\href{https://edgr-odin-blog-access.vercel.app/}{Blog API}} $|$ \emph{Node, React, TailwindCSS, PostgreSQL + Prisma, Railway, Vercel, Supabase}}{Aug. 2024}
           \resumeItemListStart
             \resumeItem{Personal project of a Blog API with admin and viewer frontends, made from scratch.}
             \resumeItem{User authentication with JSON Web Tokens, as well as full stack deployment using Railway for the backend and Vercel for frontends}
           \resumeItemListEnd
         \resumeProjectHeading
-      {\textbf{\href{https://odin-file-uploader-production-11ed.up.railway.app/}{File Uploader}} $|$ \emph{Node/Express, PostgreSQL + Prisma, Railway, Supabase}}{Aug. 2024}
+      {\textbf{\href{https://odin-fileuploader-production.up.railway.app}{File Uploader}} $|$ \emph{Node/Express, PostgreSQL + Prisma, Railway, Supabase}}{Aug. 2024}
         \resumeItemListStart
           \resumeItem{Personal project of a file storage websites, complete with user auth and folder hierarchy system.}
           \resumeItem{Made with Node.js and Express Views, with Prisma + Postgres database and Supabase CDN, built from scratch.}
         \resumeItemListEnd
         \resumeProjectHeading
-        {\textbf{\href{https://safarinexus.github.io/odin_projects/}{TOP Projects}} $|$ \emph{React, PostgreSQL, Prisma, Node.js, Express.js, Webpack, RESTful API}}{Feb. 2024 -- Sept. 2024}
+        {\textbf{\href{https://safarinexus.github.io/edgr-odinprojects/}{TOP Projects}} $|$ \emph{React, PostgreSQL, Prisma, Node.js, Express.js, Webpack, RESTful API}}{Feb. 2024 -- Sept. 2024}
           \resumeItemListStart
-          \resumeItem{A collection full-stack projects developed from "The Odin Project" where I self-taught full-stack development}
-          \resumeItem{Projects include frontend webs app such as a weather app and React shopping page, and full-stack web apps such as an inventory site and message board. All built from scratch.}
+          \resumeItem{A collection full-stack projects developed in my undertaking of "The Odin Project" where I self-taught full-stack development}
+          \resumeItem{Projects include frontend webs app such as a weather app and React shopping page, and full-stack web apps such as an inventory site and a RESTful blog API. All built from scratch.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -227,11 +232,11 @@
 \section{Technical Skills \& Interests}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres + Prisma), TypeScript/JavaScript, Node.js, HTML/CSS, R, PHP} \\
-     \textbf{Frameworks}{: React, Express, Jest, Vitest, SuperTest, TailwindCSS, GSAP, Next.js} \\
-     \textbf{Developer Tools}{: Git, Figma, SAP, Redis, Webpack, Vercel, Heroku, Railway, Koyeb} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
-     \textbf{Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
+     {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{SQL (PostgreSQL + Prisma)}, Java, C/C++, HTML/CSS, R, PHP} \\
+     {Frameworks}{: \textbf{Next.js}, \textbf{Express.js}, \textbf{TailwindCSS}, \textbf{GSAP Animation Library}, Jest} \\
+     {Developer Tools}{: \textbf{Git/GitHub}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, Figma, SAP, Redis, Heroku, Railway, Koyeb} \\
+     {Libraries}{: \textbf{React.js}, pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
+     {Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
  \end{itemize}
 
