--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -142,7 +142,7 @@
       \resumeItemListEnd
     \resumeSubheading
       {University of St. Gallen}{Sept. 2023 -- Dec. 2023}
-      {Singapore Universities Student Exchange Programme, Fall Semester 2023}{St. Gallen, Switzerland}
+      {International Student Exchange Programme, Fall Semester 2023}{St. Gallen, Switzerland}
   \resumeSubHeadingListEnd
 
 
