--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -135,8 +135,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Singapore Management University}{Aug. 2020 -- Present}
-      {Bachelor of Accountancy, Computer Science}{Singapore}
+      {Singapore Management University}{Aug. 2020 -- Dec. 2024}
+      {Bachelor of Accountancy, Information Systems}{Singapore}
       \resumeItemListStart
         \resumeItem{\textbf {Relevant Coursework:} Web App Development, Data Structures \& Algorithms, Software Engineering, Data Management}
       \resumeItemListEnd
@@ -164,9 +164,7 @@
       {Government Technology Agency (GovTech)}{Jan. 2023}
       {Software Engineer Intern}{Singapore}
       \resumeItemListStart
-        \resumeItem{Worked on the Tech iOSH Refresh Project aimed at providing a more seamless registration portal for more than 2000 safety and health professionals}
-        \resumeItem{Developed \& Standardized UI components, which led to a 30\% reduction in code duplication and improved code maintainability}
-        \resumeItem{Improved user experience by implementing user-centered design principles in Figma, resulting in a 25\% increase in usability scores from user testing sessions}
+        \resumeItem{Worked on the Tech iOSH Refresh Project aimed at providing a more seamless registration portal for more than 2000 safety and health professionals, where I developed \& standardized UI components, resulting in a 30\% reduction in code duplication \& a 25\% increase in usability scores from user testing sessions}
         \resumeItem{Technologies: \textbf{React, Figma, HTML/CSS}}
       \resumeItemListEnd
 
@@ -195,6 +193,19 @@
 
   \resumeSubHeadingListEnd
 
+
+%-----------INCOMING-----------
+\section{Incoming}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+    {Central Provident Fund Board}{Jan. 2025 -- Jun. 2025}
+    {Incoming Software Engineer Intern}{Singapore}
+    \resumeItemListStart
+        \resumeItem{Joining the Frontier Products Team, Business Incubator \& Accelerator}
+        \resumeItem{Technologies: \textbf{Next.js, Python}}
+      \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------
 \section{Projects}
@@ -233,9 +244,9 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{SQL (PostgreSQL + Prisma)}, Java, C/C++, HTML/CSS, R, PHP} \\
-     {Frameworks}{: \textbf{Next.js}, \textbf{Express.js}, \textbf{TailwindCSS}, \textbf{GSAP Animation Library}, Jest} \\
+     {Frameworks}{: \textbf{Next.js}, \textbf{React.js}, \textbf{Express.js}, \textbf{TailwindCSS}, \textbf{GSAP Animation Library}, Jest} \\
      {Developer Tools}{: \textbf{Git/GitHub}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, Figma, SAP, Redis, Heroku, Railway, Koyeb} \\
-     {Libraries}{: \textbf{React.js}, pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
+     {Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
      {Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
  \end{itemize}
