new branch for cpf and 2025 apps

--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -159,6 +159,14 @@
   %     \resumeItemListEnd
   %    \resumeSubHeadingListEnd
   %-------------------------------------------
+    \resumeSubheading
+      {Central Provident Fund Board (CPFB)}{Jan. 2025 - Present}
+      {Software Engineer Intern}{Singapore}
+      \resumeItemListStart
+        \resumeItem{Worked as part of the Business Incubator \& Accelerator team on \textbf{docCentral}, an internal management portal with a Microsoft Word Add-In that automates filling in of long documents and contracts for use across the entire CPFB.}
+        \resumeItem{Developed express servers and APIs to contribute to microservice architecture}
+        \resumeItem{Technologies: \textbf{GitLab, Next.js, Node.js, Express.js}}
+    \resumeItemListEnd
 
     \resumeSubheading
       {Government Technology Agency (GovTech)}{Jan. 2023}
