--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -131,19 +131,7 @@
     (+65) 97379450
 \end{center}
 
-%-----------EDUCATION-----------
-\section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Singapore Management University}{Aug. 2020 -- Dec. 2024}
-      {Bachelor of Accountancy, Information Systems}{Singapore}
-      \resumeItemListStart
-        \resumeItem{\textbf {Relevant Coursework:} Web App Development, Data Structures \& Algorithms, Software Engineering, Data Management}
-      \resumeItemListEnd
-    \resumeSubheading
-      {University of St. Gallen}{Sept. 2023 -- Dec. 2023}
-      {International Student Exchange Programme, Fall Semester 2023}{St. Gallen, Switzerland}
-  \resumeSubHeadingListEnd
+
 
 
 %-----------EXPERIENCE-----------
@@ -161,10 +149,20 @@
   %-------------------------------------------
 
     \resumeSubheading
+    {Central Provident Fund Board (CPFB)}{Jan. 2023 -- Present}
+    {Software Engineer Intern}{Singapore}
+    \resumeItemListStart
+      \resumeItem{Worked as part of the Business Incubator \& Accelerator team on \textbf{docCentral}, an internal management portal with a Microsoft Word Add-In that automates filling in of long documents and contracts for use across the whole of government}
+      \resumeItem{Adopted Jest unit testing for codebase, wrote 100\% code coverage unit tests, debugged and resolved critical product issues, refactored code to improve maintainability, improving product stability and reliability by 100\%}
+      \resumeItem{Developed a serverless API that receives requests from FormSG webhook to automate task creation on Notion dashboard \& Telegram channel with the use of Plumber, increasing team and product manager productivity by 50\%}
+      \resumeItem{Technologies: \textbf{Next.js, Node.js, Express.js, Django + Python, AWS, GitLab, MongoDB}}
+    \resumeItemListEnd
+
+    \resumeSubheading
       {Government Technology Agency (GovTech)}{Jan. 2023}
       {Software Engineer Intern}{Singapore}
       \resumeItemListStart
-        \resumeItem{Worked on the Tech iOSH Refresh Project aimed at providing a more seamless registration portal for more than 2000 safety and health professionals, where I developed \& standardized UI components, resulting in a 30\% reduction in code duplication \& a 25\% increase in usability scores from user testing sessions}
+        \resumeItem{Worked on the Tech iOSH Refresh Project aimed at providing a more seamless portal for more than 2000 safety and health professionals, where I developed UI components, resulting in a 30\% reduction in code duplication \& a 25\% increase in usability scores from user testing sessions}
         \resumeItem{Technologies: \textbf{React, Figma, HTML/CSS}}
       \resumeItemListEnd
 
@@ -182,8 +180,7 @@
       {Accenture}{June. 2022 -- Aug. 2022}
       {Software Development Engineer in Test Intern}{Singapore}
       \resumeItemListStart
-        \resumeItem{Developed testing tools and performed UAT Testing for iHiS Billing Transform project, aimed at digitally transforming the nationwide healthcare billing solution}
-        \resumeItem{Developed test scripts and templates for testing cycle through SOAP APIs and Python, where I identified and documented over 60 critical defects, improving overall software quality and reducing post-release issues by 30\%.}
+        \resumeItem{Developed testing tools and performed UAT Testing for iHiS Billing Transform project, aimed at digitally transforming the nationwide healthcare billing solution, where I used Python and SOAP APIs to test the platform and develop testing tools and scripts. I identified over 60 critical defects and reduced post-release issues by 30\%}
         \resumeItem{Technologies: \textbf{Python, SOAP APIs}}
       \resumeItemListEnd
 
@@ -209,12 +206,6 @@
             \resumeItem{User authentication with JSON Web Tokens, as well as full stack deployment using Railway for the backend and Vercel for frontends}
           \resumeItemListEnd
         \resumeProjectHeading
-      {\textbf{\href{https://odin-fileuploader-production.up.railway.app}{File Uploader}} $|$ \emph{Node/Express, PostgreSQL + Prisma, Railway, Supabase}}{Aug. 2024}
-        \resumeItemListStart
-          \resumeItem{Personal project of a file storage websites, complete with user auth and folder hierarchy system.}
-          \resumeItem{Made with Node.js and Express Views, with Prisma + Postgres database and Supabase CDN, built from scratch.}
-        \resumeItemListEnd
-        \resumeProjectHeading
         {\textbf{\href{https://safarinexus.github.io/edgr-odinprojects/}{TOP Projects}} $|$ \emph{React, PostgreSQL, Prisma, Node.js, Express.js, Webpack, RESTful API}}{Feb. 2024 -- Sept. 2024}
           \resumeItemListStart
           \resumeItem{A collection full-stack projects developed in my undertaking of "The Odin Project" where I self-taught full-stack development}
@@ -223,19 +214,30 @@
     \resumeSubHeadingListEnd
 
 
-
-%
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills \& Interests}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{SQL (PostgreSQL + Prisma)}, Java, C/C++, HTML/CSS, R, PHP} \\
-     {Frameworks}{: \textbf{Next.js}, \textbf{React.js}, \textbf{Express.js}, \textbf{TailwindCSS}, \textbf{GSAP Animation Library}, Jest} \\
-     {Developer Tools}{: \textbf{Git/GitHub}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, Figma, SAP, Redis, Heroku, Railway, Koyeb} \\
+      {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{Java}, \textbf{Go}, \textbf{SQL (PostgreSQL + Prisma)}, C/C++, HTML/CSS, R, PHP} \\
+      {Frameworks}{: \textbf{Next.js}, \textbf{React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, \textbf{GSAP Animation Library}, Jest} \\
+      {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, \textbf{MongoDB}, Figma, SAP, Redis, Heroku, Railway, Koyeb} \\
      {Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
      {Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
  \end{itemize}
+
+
+%-----------EDUCATION-----------
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Singapore Management University}{Aug. 2020 -- Dec. 2024}
+      {Bachelor of Accountancy with Second Major in Information Systems}{Singapore}
+      \resumeItemListStart
+        \resumeItem{\textbf {Relevant Coursework:} Web App Development, Data Structures \& Algorithms, Software Engineering, Data Management}
+        \resumeItem{\textbf {Semester Abroad/Exchange:} University of St. Gallen, Switzerland (Fall 2023)}
+      \resumeItemListEnd
+  \resumeSubHeadingListEnd
 
 
 %-------------------------------------------
