--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -152,7 +152,7 @@
       \resumeItem{Worked as part of the Business Incubator \& Accelerator team on \textbf{docCentral}, an internal management portal with a Microsoft Word Add-In that automates filling in of long documents and contracts for use across the whole of government}
       \resumeItem{Adopted Jest unit testing for codebase, wrote 100\% code coverage unit tests, debugged and resolved critical product issues, refactored code to improve maintainability, improving product stability and reliability by 100\%}
       \resumeItem{Developed a serverless API that receives requests from FormSG webhook to automate task creation on Notion dashboard \& Telegram channel with the use of Plumber, increasing team and product manager productivity by 50\%}
-      \resumeItem{Technologies: \textbf{Next.js, Node.js, Express.js, Django + Python, AWS, GitLab, MongoDB}}
+      \resumeItem{Technologies: \textbf{Next.js, Node.js, Express.js, Django + Python, AWS, GitLab, MongoDB, Jest}}
     \resumeItemListEnd
 
     \resumeSubheading
@@ -191,7 +191,7 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-        {\textbf{\href{https://edgr.live}{Portfolio Website}} $|$ \emph{Next.js, React.js, TypeScript, TailwindCSS, GSAP, Vercel}}{Oct. 2024}
+        {\textbf{\href{https://edgr.live}{Portfolio Website}} $|$ \emph{Next.js, React.js, TypeScript, TailwindCSS, GSAP, Vercel, MDX}}{Oct. 2024}
           \resumeItemListStart
           \resumeItem{My own personal portfolio website made from scratch, showcasing my personality, projects and experience.}
           \resumeItem{Built and designed entirely by me.}
@@ -216,8 +216,8 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
       {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{Java}, \textbf{Go}, \textbf{SQL (PostgreSQL + Prisma)}, C/C++, HTML/CSS, R, PHP} \\
-      {Frameworks}{: \textbf{Next.js}, \textbf{React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, \textbf{GSAP Animation Library}, Jest} \\
-      {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, \textbf{MongoDB}, Figma, SAP, Redis, Heroku, Railway, Koyeb} \\
+      {Frameworks}{: \textbf{Next.js}, \textbf{React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, \textbf{Jest}, \textbf{JUnit}, \textbf{GSAP Animation Library}} \\
+      {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, \textbf{MongoDB}, Figma} \\
      {Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
      {Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
@@ -231,7 +231,7 @@
       {Singapore Management University}{Aug. 2020 -- Dec. 2024}
       {Bachelor of Accountancy with Second Major in Information Systems}{Singapore}
       \resumeItemListStart
-        \resumeItem{\textbf {Relevant Coursework:} Web App Development, Data Structures \& Algorithms, Software Engineering, Data Management}
+        \resumeItem{\textbf {Relevant Coursework:} Web App Development, Computational Thinking (Data Structures \& Algorithms), Software Engineering, Data Management}
         \resumeItem{\textbf {Semester Abroad/Exchange:} University of St. Gallen, Switzerland (Fall 2023)}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
